# hoax

./: ARCHITECTURE.md  README.md  config.toml  pyproject.toml
examples/: flip.toml  interactive.toml  random.toml  sample.toml
examples/LilyDemo/: AssumptionExample.txt  AssumptionLilyExample.toml  README.md  lilydemo04.hoa  lilydemo04.tlsf
hoa_exec/: config.py  drivers.py  hoa.py  main.py  runners.py  stepping.py
hoa_exec/config/: config.py  toml_v1.py
hoax/: drivers.py  hoa.py  hooks.py  main.py  runners.py  util.py
hoax/config/: config.py  toml_v1.py
tests/: test_hoa_exec.py  test_hoax.py
