[project]
name = "hoa_exec"
version = "0.1.0"
description = "Execute a HOA automaton"
authors = [{ name = "Luca Di Stefano", email = "luca.di.stefano@tuwien.ac.at" }]
requires-python = ">=3.12,<=3.12.3"
dependencies = [
    "hoa-utils",
    "typer>=0.15.4,<0.16",
    "msgspec>=0.18.6,<0.19",
    "tomli>=2.0.1,<3",
    "networkit",
    "lark>=1.2.2,<2",
    "msgpack>=1.1.0",
]

[project.scripts]
hoa_exec = "hoa_exec.main:app"

[dependency-groups]
dev = ["pytest~=5.2"]

[tool.uv]

[tool.uv.sources]
hoa-utils = { git = "https://github.com/lou1306/hoa-utils.git" }
networkit = { git = "https://github.com/networkit/networkit", rev = "06c3fea" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

