[project]
name = "hoax-hoa-executor"
version = "0.1.6"
description = "Execute HOA omega-automata"
readme = "README.md"
license = "MIT"
authors = [{ name = "Luca Di Stefano", email = "luca.di.stefano@tuwien.ac.at" }]
requires-python = ">=3.12,<3.15"
dependencies = [
    "bnet2hoa>=0.3.0",
    "hoa_utils_redux>=0.2.0",
    "typer>=0.21.1",
    "msgspec>=0.20.0,<1",
    "tomli>=2.0.1,<3",
    "networkit>=11.2.1",
    "msgpack>=1.1.0",
    "pycosat>=0.6.6",
    "sympy>=1.14.0",
    "setuptools>=80.10.1",
    "cython>=3.2.4",
    "bidict>=0.23.1",
    "fastrand>=3.0.8",
    "swig>=4.4.1",
    "lark>=1.3.1",
]

[project.urls]
Repository = "https://github.com/lou1306/hoax"
Issues = "https://github.com/lou1306/hoax/issues"

[project.scripts]
hoax = "hoax.main:app"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.16.0",
    "pytest~=5.2",
]

[tool.uv]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hoax"]
